--- a/src/style/login.scss
+++ b/src/style/login.scss
@@ -39,8 +39,9 @@
         height: 30px;
         width: 35%;
         outline: none;
-        background-color: black;
+        background-color: gray;
         border: 1px solid black;
+        color: white;
         border-radius: 3px;
       }
     }
